--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   slidable_button: ^1.3.1
   wakelock: ^0.6.1+2
   flutter_background: ^1.1.0
+  numberpicker: ^2.1.1
 
 dev_dependencies:
   flutter_test:
